--- a/admin/admin.html
+++ b/admin/admin.html
@@ -80,10 +80,10 @@
 </head>
 <body>
     <script>
-    var API_KEY = "nd6YyykHsCygZZi64F"
+    var API_KEY = "U6U2XoC4auaMm3fJoV"
     var SERVER_URL = window.location.origin;
-    var USERNAME = "admin"
-    var PASSWORD = "admin"
+    var USERNAME = "youhz45"
+    var PASSWORD = "2Pnq7n7twXht3dsi"
     function onSubmit() {
         var form = document.getElementsByTagName("form")[0];
         var button = form[2];
